# ScreenMon

./: .gitignore  README.md  displaymon.py  main.py  pyproject.toml
