[tool.poetry]
name = "screenmon"
version = "0.3.0"
description = "A simple Python script to monitor screen lock state"
authors = ["Tony <tony@tonykirkland.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydbus = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
