[tool.poetry]
name = "screenmon"
version = "0.3.0"
description = "A simple Python script to monitor screen lock state"
authors = ["Tony <tony@tonykirkland.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydbus = "^0.6.0"
pygobject = "^3.46.0"
# NOTE: `gi.repository` requires system-level packages: python3-gi, python3-gi-cairo, gir1.2-gtk-3.0 (for Debian/Ubuntu)
screeninfo = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
